Eclipse test (#13)
* Eclipse export

* test

* Added files to gitignore back